[build-system]
requires = [
    "setuptools>=61.0.0",
    "setuptools-scm>=8.0",
]
build-backend = "setuptools.build_meta"

[project]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
]
name = "crystallm"
dynamic = ["version"]
description = "A fork of lantunes/CrystaLLM"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Sarthak Kapoor", email = "sarthak.kapoor@physik.hu-berlin.de" },
]
license = { file = "LICENSE" }
dependencies = [
    "pandas>=1.5.3",
    "pymatgen>=2023.3.23",
    "numpy>=1.24.2",
    "scikit-learn>=1.2.2",
    "tqdm>=4.65.0",
    "pyzmq==25.1.1",
    "omegaconf==2.3.0",
    "pyyaml>=6.0.1",
    "smact==2.5.5",
    "matminer>0.9.0",
    "torch>=2.0.1",
]
[project.urls]
Repository = "https://github.com/ka-sarthak/CrystaLLM"

[project.optional-dependencies]


[tool.uv]

# [tool.ruff]
# include = ["src/crystallm/*.py", "tests/*.py"]


# # Same as Black.
# line-length = 88
# indent-width = 4


# [tool.ruff.lint]
# select = [
#     # pycodestyle
#     "E",
#     # Pyflakes
#     "F",
#     # pyupgrade
#     "UP",
#     # isort
#     "I",
#     # pylint
#     "PL",
# ]

# ignore = [
#     "F403", # 'from module import *' used; unable to detect undefined names
# ]

# fixable = ["ALL"]

# # Allow unused variables when underscore-prefixed.
# dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# # this is entirely optional, you can remove this if you wish to
# [tool.ruff.format]
# # use single quotes for strings.
# quote-style = "single"

# # indent with spaces, rather than tabs.
# indent-style = "space"

# # Like Black, respect magic trailing commas.
# skip-magic-trailing-comma = false

# # Like Black, automatically detect the appropriate line ending.
# line-ending = "auto"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.cruft]
# Avoid updating workflow files, this leads to permissions issues
skip = [".github/*"]

[tool.setuptools_scm]
